--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
